# 2D-LiDAR-based-wall-tracing

./: vision_darknet_detect.7z
autodrive/: CMakeLists.txt  package.xml
autodrive/include/: constant_a.h
autodrive/launch/: line_tracing.launch
autodrive/src/: autodrive_pub.cpp  autodrive_sub.cpp
object_manager/object_manager/: CMakeLists.txt  package.xml
object_manager/object_manager/cfg/: dynamic_params.cfg  manager_params.yaml
object_manager/object_manager/include/object_manager/: AVCInterface.h  ROIcheck.h  genAutowareObstacles.h  mission_accident_vehicle.h  mission_emergency_vehicle.h  mission_emergency_vehicle.h.simulation  mission_handler.h  mission_none.h  mission_pedestrian.h  mission_processor.h  mission_traffic_sign.h  mission_traffic_sign.h_old
object_manager/object_manager/launch/: object_manager.launch
object_manager/object_manager/src/: AVCInterface.cpp  ROIcheck.cpp  genAutowareObstacles.cpp  object_manager.cpp
rplidar_ros/: CMakeLists.txt  package.xml
rplidar_ros/include/rplidar_ros/: rp_point_calculation_define.h
rplidar_ros/msg/: final_direction.msg  inspection_value.msg
rplidar_ros/rviz/: rplidar.rviz
rplidar_ros/src/: inspection_handing.cpp  rp_degree_to_pointxy.cpp  rp_point_calculation.cpp
